--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "SignIn";
 }
 
-<h1>SignIn</h1>
+<h1>Sign In</h1>
 
 @if (ViewBag.msg != null)
 {
@@ -18,6 +18,6 @@
         <label asp-for="Password" ></label>
         <input asp-for="Password" />
 
-        <input type="submit" value="Create" />
+        <input type="submit" value="Log in" />
 
     </form>
