--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,18 +44,16 @@
                         else
                         {
 
-                            <li class="nav-item">
-                                <button class="nav-link text-dark">
+                            
+                                <button class="btn-outline-primary">
                                     <a asp-area="" asp-controller="Account" asp-action="SignIn">Login</a>
                                 </button>
-                            
-                                    </li>
-                            <li>
-                                <button class="nav-link text-dark">
+
+
+                                <button class="btn-outline-primary">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="CreateUser">Add User</a>
                                 </button>
-                            </li>
-                         
+                      
                         }
 
                  
