--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
 
                                 <button class="btn-outline-primary">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="CreateUser">Add User</a>
+                                    <a asp-area="" asp-controller="Account" asp-action="CreateUser" class="nav-link">Register</a>
                                 </button>
                       
                         }
