--- a/Views/Account/CreateUser.cshtml
+++ b/Views/Account/CreateUser.cshtml
@@ -34,5 +34,5 @@
     <label asp-for="ConfirmPassword"></label>
     <input asp-for="ConfirmPassword" />
 
-    <input type="submit" value="Create" />
+    <input type="submit" value="Create User" />
 </form>
