--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,11 @@
 }
 @if (User.Identity.IsAuthenticated)
 {<h1>You are inloged in system</h1>
+    <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="RoleList">Role List </a>
+    <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="AddRole">Add Role </a>
 }
 @if (!User.Identity.IsAuthenticated)
 {
 
- <h1> You most log in </h1> 
-        }
+    <h1> You most log in </h1>
+}
