--- a/Views/Account/AddUserToRole.cshtml
+++ b/Views/Account/AddUserToRole.cshtml
@@ -9,18 +9,17 @@
     @foreach (var item in Model)
     {
     <tr>
+        <td>@item.Email</td>
+        <td>&nbsp;</td>
         <td>@item.UserName</td>
+  
        
         <td>
-            <button> @Html.ActionLink("add to group ", "AddUserToRole", "Account", new { role = ViewBag.Role, userId = item.Id })</button>
+            <a asp-controller="Account" asp-action="AddUserToRoleSave">Add User</a>
            
+
         </td>
-        <td>
-            <button class="btn btn-danger btn-sm m-1"
-                    onclick="AddPersonToRole('@("User" + Model)','@Url.Action("AddpersontoRole","user",new { id = Model })')">
-                Delete
-            </button>
-        </td>
+        
     </tr>
     }
 </table>
