--- a/Views/Account/RoleList.cshtml
+++ b/Views/Account/RoleList.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<IdentityRole>
+﻿@model List<AppUser>
 @{
     ViewData["Title"] = "RoleList";
 }
@@ -20,7 +20,7 @@
             <tr>
 
                 <td>@item.Name</td>
-                <td>@item.Id </td>
+                <td>@item </td>
                 <td></td>
                 <td>
         <thead>
