--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebAppMVCRecap
-@using WebAppMVCRecap.Models
+﻿@using Identity
+@using Identity.Models
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
