list og role and button add user to role

--- a/Views/Account/AddRole.cshtml
+++ b/Views/Account/AddRole.cshtml
@@ -9,7 +9,7 @@
 <form asp-action="AddRole" method="post">
     
     <label asp-for="Name"></label>
-   <input asp-for="UserEmail" />
+  <input asp-for="Name" />
 
     <input type="submit" value="Add" class="btn btn-success" />
 </form>
