--- a/Views/Account/AddUserToRole.cshtml
+++ b/Views/Account/AddUserToRole.cshtml
@@ -20,7 +20,7 @@
 
 
         <td>
-            <a asp-controller="Account" asp-action="AddUserToRoleSave">Add User</a>
+            <button type="button" class="btn btn-success"> <a asp-controller="Account" asp-action="AddUserToRoleSave">Add User</a></button>
 
 
         </td>
