--- a/Views/Account/AddUserToRole.cshtml
+++ b/Views/Account/AddUserToRole.cshtml
@@ -10,11 +10,16 @@
     @foreach (var item in Model)
     {
     <tr>
-        @*<td>@item.UserNumber</td>*@
+
         <td>&nbsp;</td>
         @if (item.UserName != null)
         {
-            <td>@item.UserName</td>
+            @if (item.Id != null)
+            {
+                <td>@item.UserName</td>
+                <td>@item.Email</td>
+            }
+
         }
 
 
