--- a/Views/Account/RoleList.cshtml
+++ b/Views/Account/RoleList.cshtml
@@ -24,7 +24,7 @@
                     @item.Name
                 </td>
                 <td>
-                <td>    <a asp-controller="Account" asp-action="AddUserToRole" class="btn btn-success">Add user to  role</a></td>
+                <td>    <a asp-controller="Account" asp-action="AddUserToRole" class="btn btn-success">Add user to Country</a></td>
             </tr>
           
        
