--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
     }
     @if (User.Identity.IsAuthenticated)
     {<h1>Welcom @User.Identity.Name</h1>
-        <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="RoleList">Role List </a>
-        <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="AddRole">Add Role </a>
+       <button><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="RoleList">Country´s </a></button> 
+        <button><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="AddRole">Add Country </a></button>
     }
     @if (!User.Identity.IsAuthenticated)
     {
