--- a/Views/Account/Create.cshtml
+++ b/Views/Account/Create.cshtml
@@ -17,6 +17,7 @@
 
         <label asp-for="Password" ></label>
         <input asp-for="Password" />
+        <input type="checkbox" />
 
         <input type="submit" value="Login" />
 
