--- a/Views/Account/CreateUser.cshtml
+++ b/Views/Account/CreateUser.cshtml
@@ -49,8 +49,8 @@
             </div>
           
                 <div class="col=4">
-                    <div>Admin<input type="checkbox" name="Admin" value="Admin"> </div>
-                    <div><input type="submit" value="Create" /></div>
+                    <div>Create as Admin<input type="checkbox" name="Admin" value="Admin"> </div>
+                    <div><input type="submit" value="Create " /></div>
                 </div>
           
     </form>
