--- a/Views/Account/AddUserToRole.cshtml
+++ b/Views/Account/AddUserToRole.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AddUserToRole";
 }
 
-<h1>Add User To Country</h1>
+<h1>Add User To Role</h1>
 
 <table>
     @foreach (var item in Model)
