--- a/Views/Account/RoleList.cshtml
+++ b/Views/Account/RoleList.cshtml
@@ -25,7 +25,7 @@
                     </td>
                     <td>
                   
-                    <td>    <a asp-controller="Account" asp-action="AddUserToRole" class="btn btn-success">Add user to Country</a></td>
+                    <td>    <a asp-controller="Account" asp-action="AddThisUserToRole" class="btn btn-success">Add user to Country</a></td>
                 </tr>
 
 
