--- a/Views/Account/AddUserToRole.cshtml
+++ b/Views/Account/AddUserToRole.cshtml
@@ -25,7 +25,7 @@
       
    
             <td>
-                <button type="button" class="btn btn-success"> <a asp-controller="Account" asp-action="AddUserToRole">Add User</a></button>
+                <button type="button" class="btn btn-success"> <a asp-controller="Account" asp-action="AddUserToRoleSave">Add User</a></button>
 
 
             </td>
