--- a/Views/Account/AddThisUserToRole.cshtml
+++ b/Views/Account/AddThisUserToRole.cshtml
@@ -12,7 +12,7 @@
             <td type="button" class=" btn-link ">
 
                 <div class="btn-btn">
-                    @Html.ActionLink(item.UserName, "AddUserToRoleSave", "Account", new { userId = item.UserName, roleId = item.Id })
+                    @Html.ActionLink(item.UserName, "AddUserToRoleSave", "Account", new { userId = item.Id, roleId = ViewBag.userId })
           </div>  </td>
         </tr>
     </table>
