--- a/Views/Account/RoleList.cshtml
+++ b/Views/Account/RoleList.cshtml
@@ -25,7 +25,7 @@
                     </td>
                     <td>
                   
-                    <td>    <a asp-controller="Account" asp-action="AddThisUserToRole" asp-route-id="@item.Id" class="btn btn-success">Add users to this Role</a></td>
+                    <td>    <a asp-controller="Account" asp-action="AddThisUserToRole" asp-route-id="@item.Name" class="btn btn-success">Add users to this Role</a></td>
                 </tr>
 
 
