--- a/Views/Account/AddThisUserToRole.cshtml
+++ b/Views/Account/AddThisUserToRole.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "AddThisUserToRole";
 }
 
-<h1>Pick a role for the user</h1>
+<h1>Pick a user for this role</h1>
 
 @foreach (var item in Model)
 {
